--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ VITE_FIREBASE_APP_ID=1:398874377867:web:55c982a51293615fcfde8e
 
 # Optional: Emulators (development)
 VITE_USE_FIREBASE_EMULATORS=false
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 VITE_FIREBASE_ENABLE_PERSISTENCE=true
 
 # Demo defaults
