--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+NODE_ENV=development
+
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=AIzaSyCY2nBQn50KnGx44PTvIKMCEyeQtldwdwA
 VITE_FIREBASE_AUTH_DOMAIN=erp-industrial-inox.firebaseapp.com
